--- a/modules/distribution/conf/shindig/web.xml
+++ b/modules/distribution/conf/shindig/web.xml
@@ -159,6 +159,16 @@
         <url-pattern>*</url-pattern>
     </filter-mapping>
 
+    <filter>
+        <filter-name>CRLFPreventionFilter</filter-name>
+        <filter-class>org.wso2.carbon.ui.filters.CRLFPreventionFilter</filter-class>
+    </filter>
+
+    <filter-mapping>
+        <filter-name>CRLFPreventionFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+
     <listener>
         <listener-class>org.apache.shindig.common.servlet.GuiceServletContextListener</listener-class>
     </listener>
