fixed an issue in pom.xml . closing tag added

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -126,7 +126,7 @@
                                 <replace
                                         file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/tomcat/context.xml"
                                         token="&lt;Context crossContext=&quot;true&quot;&gt;"
-                                        value="&lt;Context crossContext=&quot;true&quot;&gt; useHttpOnly=&quot;true&quot;"/>
+                                        value="&lt;Context crossContext=&quot;true&quot; useHttpOnly=&quot;true&quot;&gt;"/>
                                 <replace
                                         file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/carbon.xml"
                                         token="&lt;ServerURL&gt;https://${carbon.local.ip}"
