Adding the required dependency and correcting compiler version to fix IDENTITY-3957

--- a/modules/samples/sso/SSOAgentSample/pom.xml
+++ b/modules/samples/sso/SSOAgentSample/pom.xml
@@ -27,6 +27,10 @@
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.ws.security</groupId>
+            <artifactId>wss4j</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
@@ -36,8 +40,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
         </plugins>
