--- a/pom.xml
+++ b/pom.xml
@@ -941,6 +941,21 @@
                 <artifactId>tomcat</artifactId>
                 <version>7.0.52.wso2v5</version>
             </dependency>
+            <dependency>
+                <groupId>org.apache.santuario</groupId>
+                <artifactId>xmlsec</artifactId>
+                <version>${xmlsec.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>xmltooling</artifactId>
+                <version>${xmltooling.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.opensaml</groupId>
+                <artifactId>openws</artifactId>
+                <version>${openws.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -1019,7 +1034,7 @@
         <opensaml.version>2.4.1</opensaml.version>
         <opensaml2.wso2.version>2.4.1.wso2v1</opensaml2.wso2.version>
         <wss4j.wso2.version>1.5.11.wso2v11</wss4j.wso2.version>
-        <openws.version>1.4.2</openws.version>
+        <openws.version>1.4.1</openws.version>
         <charon.version>2.0.1</charon.version>
         <xalan.version>2.7.1</xalan.version>
         <xalan.wso2.version>2.7.0.wso2v1</xalan.wso2.version>
@@ -1110,6 +1125,8 @@
         <osgi.service.component.imp.pkg.version.range>[1.2.0, 2.0.0)</osgi.service.component.imp.pkg.version.range>
         <org.wso2.carbon.core.services.version>4.2.0</org.wso2.carbon.core.services.version>
         <org.apache.tomcat.wso2.version>7.0.52.wso2v5</org.apache.tomcat.wso2.version>
+        <xmlsec.version>1.4.4</xmlsec.version>
+        <xmltooling.version>1.3.1</xmltooling.version>
     </properties>
 
     <repositories>
