--- a/modules/distribution/src/assembly/filter.properties
+++ b/modules/distribution/src/assembly/filter.properties
@@ -1,6 +1,6 @@
 product.name=WSO2 Identity Server
 product.key=IS
-product.version=5.1.0-SNAPSHOT
+product.version=5.1.0-beta
 hotdeployment=true
 hotupdate=true
 default.server.role=IdentityServer
