--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -116,6 +116,12 @@
 
                                 <property name="xss-is-token" value=""/>
 
+                                <property name="sso-idp-config-default"
+                                          value="&lt;!--ServiceProvider&gt;&lt;/ServiceProvider--&gt;"/>
+
+                                <property name="sso-idp-config-replace"
+                                          value="&lt;ServiceProvider&gt;${line.separator}      &lt;Issuer&gt;wso2.my.dashboard&lt;/Issuer&gt;${line.separator}      &lt;AssertionConsumerServiceURLs&gt;${line.separator}        &lt;AssertionConsumerServiceURL&gt;https://localhost:9443/dashboard/acs&lt;/AssertionConsumerServiceURL&gt;${line.separator}      &lt;/AssertionConsumerServiceURLs&gt;${line.separator}      &lt;DefaultAssertionConsumerServiceURL&gt;https://localhost:9443/dashboard/acs&lt;/DefaultAssertionConsumerServiceURL&gt;${line.separator}      &lt;SignResponse&gt;true&lt;/SignResponse&gt;${line.separator}      &lt;EnableAudienceRestriction&gt;true&lt;/EnableAudienceRestriction&gt;${line.separator}      &lt;AudiencesList&gt;${line.separator}        &lt;Audience&gt;carbonServer&lt;/Audience&gt;${line.separator}      &lt;/AudiencesList&gt;${line.separator}    &lt;/ServiceProvider&gt;"/>
+
                                 <mkdir dir="${tempdir}"/>
                                 <unzip dest="${tempdir}">
                                     <fileset dir="target">
@@ -234,48 +240,8 @@
 
                                 <replace
                                         file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;!--ServiceProvider&gt;"
-                                        value="&lt;ServiceProvider&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;Issuer&gt;&lt;/Issuer&gt;"
-                                        value="&lt;Issuer&gt;wso2.my.dashboard&lt;/Issuer&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;AssertionConsumerServiceURL&gt;&lt;/AssertionConsumerServiceURL&gt;"
-                                        value="&lt;AssertionConsumerServiceURL&gt;https://localhost:9443/dashboard/acs&lt;/AssertionConsumerServiceURL&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;DefaultAssertionConsumerServiceURL&gt;&lt;/DefaultAssertionConsumerServiceURL&gt;"
-                                        value="&lt;DefaultAssertionConsumerServiceURL&gt;https://localhost:9443/dashboard/acs&lt;/DefaultAssertionConsumerServiceURL&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;SignAssertion&gt;false&lt;/SignAssertion&gt;"
-                                        value="&lt;SignAssertion&gt;true&lt;/SignAssertion&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;SignResponse&gt;false&lt;/SignResponse&gt;"
-                                        value="&lt;SignResponse&gt;true&lt;/SignResponse&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;EnableAudienceRestriction&gt;false&lt;/EnableAudienceRestriction&gt;"
-                                        value="&lt;EnableAudienceRestriction&gt;true&lt;/EnableAudienceRestriction&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;Audience&gt;&lt;/Audience&gt;"
-                                        value="&lt;Audience&gt;carbonServer&lt;/Audience&gt;"/>
-
-                                <replace
-                                        file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
-                                        token="&lt;/ServiceProvider--&gt;"
-                                        value="&lt;/ServiceProvider&gt;"/>
+                                        token="${sso-idp-config-default}"
+                                        value="${sso-idp-config-replace}"/>
 
                                 <unzip dest="${tempdir}/shindig">
                                     <fileset dir="../p2-profile-gen/target/wso2carbon-core-4.4.2/repository/deployment/server/webapps">
