Removing hard coded kernel versions

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -293,12 +293,12 @@
                                         value="&lt;/Authenticator&gt;"/>
 
                                 <unzip dest="${tempdir}/shindig">
-                                    <fileset dir="../p2-profile-gen/target/wso2carbon-core-4.4.2/repository/deployment/server/webapps">
+                                    <fileset dir="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/deployment/server/webapps">
                                         <include name="shindig.war"/>
                                     </fileset>
                                 </unzip>
 
-                                <delete file="../p2-profile-gen/target/wso2carbon-core-4.4.2/repository/deployment/server/webapps/shindig.war"/>
+                                <delete file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/deployment/server/webapps/shindig.war"/>
                                 <delete file="${tempdir}/shindig/WEB-INF/web.xml"/>
 
                                 <copy todir="${tempdir}/shindig/WEB-INF" overwrite="false">
@@ -307,7 +307,7 @@
                                     </fileset>
                                 </copy>
 
-                                <zip destfile="../p2-profile-gen/target/wso2carbon-core-4.4.2/repository/deployment/server/webapps/shindig.war" basedir="${tempdir}/shindig" />
+                                <zip destfile="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/deployment/server/webapps/shindig.war" basedir="${tempdir}/shindig" />
 
                                 <!-- Add org.wso2.carbon.identity.entitlement.policy.finder.registry.RegistryPolicyHandler to IS -->
 
