refactored migration client
Conflicts:
	pom.xml

--- a/modules/migration/migration-5.0.0_to_5.1.0/wso2-is-migration-client/pom.xml
+++ b/modules/migration/migration-5.0.0_to_5.1.0/wso2-is-migration-client/pom.xml
@@ -67,6 +67,10 @@
             <groupId>commons-codec.wso2</groupId>
             <artifactId>commons-codec</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity</groupId>
+            <artifactId>org.wso2.carbon.identity.application.mgt</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
