--- a/modules/samples/sso/sso-agent-sample/pom.xml
+++ b/modules/samples/sso/sso-agent-sample/pom.xml
@@ -18,6 +18,12 @@
         <dependency>
             <groupId>org.opensaml</groupId>
             <artifactId>opensaml</artifactId>
+           <exclusions>
+               <exclusion>
+                   <groupId>commons-collections</groupId>
+                   <artifactId>commons-collections</artifactId>
+               </exclusion>
+           </exclusions>
         </dependency>
         <dependency>
             <groupId>org.apache.santuario</groupId>
