--- a/modules/samples/sso/sso-agent-sample/pom.xml
+++ b/modules/samples/sso/sso-agent-sample/pom.xml
@@ -45,6 +45,10 @@
                     <groupId>opensaml.wso2</groupId>
                     <artifactId>opensaml2</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>commons-collections.wso2</groupId>
+                    <artifactId>commons-collections</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
@@ -54,6 +58,10 @@
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
         </dependency>
     </dependencies>
 
