removing the migration from pack and adding script changes

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -505,6 +505,7 @@
                                 <descriptor>src/assembly/bin.xml</descriptor>
                                 <descriptor>src/assembly/src.xml</descriptor>
                                 <descriptor>src/assembly/docs.xml</descriptor>
+                                <descriptor>src/assembly/migration.xml</descriptor>
                             </descriptors>
                         </configuration>
                     </execution>
