deleting directories in distribution target

--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -431,8 +431,8 @@
                                 <delete dir="target/archive-tmp"/>
                                 <delete dir="target/dependency-maven-plugin-markers"/>
                                 <delete dir="target/maven-archiver"/>
-                                <delete dir="target/wso2carbon-core-4.3.0"/>
-                                <delete file="target/wso2is-5.1.0.jar"/>
+                                <delete dir="target/wso2carbon-core-${carbon.kernel.version}"/>
+                                <delete file="target/wso2is-${project.version}.jar"/>
                                 <delete dir="target/sources"/>
                                 <delete dir="target/site"/>
                                 <delete dir="src/site"/>
