--- a/pom.xml
+++ b/pom.xml
@@ -988,6 +988,12 @@
                 <artifactId>org.wso2.carbon.identity.application.mgt</artifactId>
                 <version>${carbon.identity.version}</version>
             </dependency>
+            <dependency>
+                <groupId>xerces</groupId>
+                <artifactId>xercesImpl</artifactId>
+                <version>${xercesImpl.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -1160,6 +1166,7 @@
         <xmlsec.version>1.4.4</xmlsec.version>
         <xmltooling.version>1.3.1</xmltooling.version>
         <carbon.metrics.version>1.1.1</carbon.metrics.version>
+        <xercesImpl.version>2.8.1</xercesImpl.version>
     </properties>
 
     <repositories>
