--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -242,6 +242,12 @@
                                        token="&lt;Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property&gt;"
                                        value="&lt;!--Property name=&quot;GetAllRolesOfUserEnabled&quot;&gt;true&lt;/Property--&gt;"/>
 
+                                <!-- turn off IsBulkImportSupported -->
+                                <replace
+                                        file="target/wso2carbon-core-${carbon.kernel.version}/repository/conf/user-mgt.xml"
+                                        token="&lt;Property name=&quot;IsBulkImportSupported&quot;&gt;true&lt;/Property&gt;"
+                                        value="&lt;Property name=&quot;IsBulkImportSupported&quot;&gt;false&lt;/Property&gt;"/>
+
                                 <replace
                                         file="../p2-profile-gen/target/wso2carbon-core-${carbon.kernel.version}/repository/conf/identity/sso-idp-config.xml"
                                         token="${sso-idp-config-default}"
