fixing conflicting xercesImpl jars

--- a/modules/samples/oauth2/playground2/pom.xml
+++ b/modules/samples/oauth2/playground2/pom.xml
@@ -57,6 +57,10 @@
                     <groupId>com.ibm.icu</groupId>
                     <artifactId>icu4j</artifactId>
                 </exclusion>
+                <exclusion>
+                    <groupId>xerces.wso2</groupId>
+                    <artifactId>xercesImpl</artifactId>
+                </exclusion>
             </exclusions>
         </dependency>
         <dependency>
