--- a/pom.xml
+++ b/pom.xml
@@ -259,6 +259,12 @@
             <organization>WSO2</organization>
         </developer>
         <developer>
+            <name>Hasanthi Dissanayake</name>
+            <id>hasanthi</id>
+            <email>hasanthi AT wso2.com</email>
+            <organization>WSO2</organization>
+        </developer>
+        <developer>
             <name>Maduranga Siriwardena</name>
             <id>maduranga</id>
             <email>maduranga AT wso2.com</email>
@@ -1117,8 +1123,8 @@
     </profiles>
 
     <properties>
-        <carbon.identity.version>5.0.6</carbon.identity.version>
-        <carbon.identity.jar.version>5.0.6</carbon.identity.jar.version>
+        <carbon.identity.version>5.0.7</carbon.identity.version>
+        <carbon.identity.jar.version>5.0.7</carbon.identity.jar.version>
         <product.identity.version>5.1.0</product.identity.version>
         <bcprov.jdk13.version>140</bcprov.jdk13.version>
         <bcprov.jdk15.version>132</bcprov.jdk15.version>
