Workflow custom event handler sample
Conflicts:
	pom.xml

--- a/modules/samples/pom.xml
+++ b/modules/samples/pom.xml
@@ -39,6 +39,7 @@
         <module>sts</module>
         <module>passive-sts</module>
         <module>identity-mgt</module>
+        <module>workflow-sample-handler</module>
     </modules>
 
 </project>
