--- a/modules/samples/workflows/workflow-sample-handler/pom.xml
+++ b/modules/samples/workflows/workflow-sample-handler/pom.xml
@@ -19,7 +19,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.wso2.is</groupId>
-        <artifactId>wso2is-identity-samples</artifactId>
+        <artifactId>wso2is-workflow-samples</artifactId>
         <version>5.2.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
