--- a/modules/samples/workflow/handler/service-provider/pom.xml
+++ b/modules/samples/workflow/handler/service-provider/pom.xml
@@ -21,7 +21,7 @@
         <groupId>org.wso2.is</groupId>
         <artifactId>wso2is-workflow-samples</artifactId>
         <version>5.2.0-SNAPSHOT</version>
-        <relativePath>../pom.xml</relativePath>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.wso2.carbon.identity</groupId>
