upgrade opensaml version 2.4.1 to 2.6.4
Conflicts:
	pom.xml

--- a/modules/samples/sts/sts-client/pom.xml
+++ b/modules/samples/sts/sts-client/pom.xml
@@ -35,8 +35,8 @@
             <artifactId>neethi</artifactId>
         </dependency>
         <dependency>
-            <groupId>opensaml.wso2</groupId>
-            <artifactId>opensaml2</artifactId>
+            <groupId>org.wso2.orbit.org.opensaml</groupId>
+            <artifactId>opensaml</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
