--- a/modules/integration/tests-integration/tests-backend/pom.xml
+++ b/modules/integration/tests-integration/tests-backend/pom.xml
@@ -276,6 +276,8 @@
                         <configuration>
                             <tasks>
                                 <ant antfile="src/test/resources/artifacts/IS/saml/saml-app-build.xml" target="saml-tenant-signingdisabled" />
+                                <ant antfile="src/test/resources/artifacts/IS/saml/registrymount/registry-app-build.xml"
+                                     target="saml-tenant-registrymount" />
                             </tasks>
                         </configuration>
                         <goals>
