--- a/modules/samples/oauth2/custom-grant/pom.xml
+++ b/modules/samples/oauth2/custom-grant/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.user.core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity</groupId>
+            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+        </dependency>
     </dependencies>
 
     <repositories>
