--- a/modules/samples/sso/sso-agent-sample/pom.xml
+++ b/modules/samples/sso/sso-agent-sample/pom.xml
@@ -61,6 +61,10 @@
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
