test case user store count feature
revert mistaken change

revert mistaken change

revert mistaken change

revert mistaken change

correcting imports

correcting imports

correcting imports

correcting imports

correcting imports

"test case user store count feature"

--- a/pom.xml
+++ b/pom.xml
@@ -3282,6 +3282,12 @@
                 <scope>compile</scope>
             </dependency>
             <dependency>
+                <groupId>org.wso2.carbon.identity</groupId>
+                <artifactId>org.wso2.carbon.identity.user.store.count.stub</artifactId>
+                <version>${carbon.identity.version}</version>
+                <scope>compile</scope>
+            </dependency>
+            <dependency>
                 <groupId>org.wso2.carbon</groupId>
                 <artifactId>org.wso2.carbon.user.core</artifactId>
                 <version>${carbon.kernel.version}</version>
